; ModuleID = '/home/carl/AnghaBench/systemd/src/network/netdev/extr_fou-tunnel.c_config_parse_ip_protocol.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/netdev/extr_fou-tunnel.c_config_parse_ip_protocol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IPPROTO_MAX = common dso_local global i32 0, align 4
@UINT8_MAX = common dso_local global i32 0, align 4
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [82 x i8] c"Failed to parse IP protocol '%s' for Foo over UDP tunnel, ignoring assignment: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_parse_ip_protocol(i8* %0, i8* %1, i32 %2, i8* %3, i32 %4, i8* %5, i32 %6, i8* %7, i8* %8, i8* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i8*, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i32, align 4
  store i8* %0, i8** %12, align 8
  store i8* %1, i8** %13, align 8
  store i32 %2, i32* %14, align 4
  store i8* %3, i8** %15, align 8
  store i32 %4, i32* %16, align 4
  store i8* %5, i8** %17, align 8
  store i32 %6, i32* %18, align 4
  store i8* %7, i8** %19, align 8
  store i8* %8, i8** %20, align 8
  store i8* %9, i8** %21, align 8
  %24 = load i8*, i8** %20, align 8
  %25 = bitcast i8* %24 to i32*
  store i32* %25, i32** %22, align 8
  %26 = load i8*, i8** %13, align 8
  %27 = call i32 @assert(i8* %26)
  %28 = load i8*, i8** %15, align 8
  %29 = call i32 @assert(i8* %28)
  %30 = load i8*, i8** %17, align 8
  %31 = call i32 @assert(i8* %30)
  %32 = load i8*, i8** %19, align 8
  %33 = call i32 @assert(i8* %32)
  %34 = load i8*, i8** %20, align 8
  %35 = call i32 @assert(i8* %34)
  %36 = load i32, i32* @IPPROTO_MAX, align 4
  %37 = sub nsw i32 %36, 1
  %38 = load i32, i32* @UINT8_MAX, align 4
  %39 = icmp sle i32 %37, %38
  %40 = zext i1 %39 to i32
  %41 = call i32 @assert_cc(i32 %40)
  %42 = load i8*, i8** %19, align 8
  %43 = call i32 @parse_ip_protocol(i8* %42)
  store i32 %43, i32* %23, align 4
  %44 = load i32, i32* %23, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %46, label %61

46:                                               ; preds = %10
  %47 = load i8*, i8** %19, align 8
  %48 = load i32*, i32** %22, align 8
  %49 = call i32 @safe_atou8(i8* %47, i32* %48)
  store i32 %49, i32* %23, align 4
  %50 = load i32, i32* %23, align 4
  %51 = icmp slt i32 %50, 0
  br i1 %51, label %52, label %60

52:                                               ; preds = %46
  %53 = load i8*, i8** %12, align 8
  %54 = load i32, i32* @LOG_ERR, align 4
  %55 = load i8*, i8** %13, align 8
  %56 = load i32, i32* %14, align 4
  %57 = load i32, i32* %23, align 4
  %58 = load i8*, i8** %19, align 8
  %59 = call i32 @log_syntax(i8* %53, i32 %54, i8* %55, i32 %56, i32 %57, i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str, i64 0, i64 0), i8* %58)
  br label %60

60:                                               ; preds = %52, %46
  store i32 0, i32* %11, align 4
  br label %64

61:                                               ; preds = %10
  %62 = load i32, i32* %23, align 4
  %63 = load i32*, i32** %22, align 8
  store i32 %62, i32* %63, align 4
  store i32 0, i32* %11, align 4
  br label %64

64:                                               ; preds = %61, %60
  %65 = load i32, i32* %11, align 4
  ret i32 %65
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @assert_cc(i32) #1

declare dso_local i32 @parse_ip_protocol(i8*) #1

declare dso_local i32 @safe_atou8(i8*, i32*) #1

declare dso_local i32 @log_syntax(i8*, i32, i8*, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
